--- a/Views/Movies/Create.cshtml
+++ b/Views/Movies/Create.cshtml
@@ -44,6 +44,11 @@
             <input type="file" asp-for="ImageFile" class="col form-control" />
             <span asp-validation-for="ImageFile" class="text-danger"></span>
         </div>
+        <div class="form-group">
+            <label asp-for="GenreId" class="control-label"></label>
+            <select asp-for="GenreId" class="form-control" asp-items="@ViewBag.Genres"></select>
+            <span asp-validation-for="GenreId" class="text-danger"></span>
+        </div>
 
         <div class="row form-group">
             <input type="submit" value="Save Infos" class="col-lg-2 btn btn-primary" />
